# wasm-bindgen-test

./: Cargo.toml  README.md  index.html  wasm-bindgen-test.html
build_web/: Cargo.toml
build_web/src/: main.rs  page.template.html
src/: lib.rs
test/: Cargo.toml
test/src/: main.rs
