[package]
name = "wasm-bindgen-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { version = "0.3.67", features = [
  "Window",
  "Document",
  "HtmlElement",
] }
wasm-bindgen = "0.2.90"

[patch.crates-io]
# wasm-bindgen = { path = "../wasm-bindgen-fork", features = ["serde-serialize"] }js-sys = "0.3.67"
# js-sys = { path = "../wasm-bindgen-fork/crates/js-sys" }
# web-sys = { path = "../wasm-bindgen-fork/crates/web-sys" }
