[workspace]
resolver = "2"
members = ["test", "build_web"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Davidster/wasm-bindgen-test"
authors = ["David Huculak https://github.com/Davidster"]

[patch.crates-io]
wasm-bindgen = { path = "../wasm-bindgen-fork" }
wasm-bindgen-cli-support = { path = "../wasm-bindgen-fork/crates/cli-support" }
js-sys = { path = "../wasm-bindgen-fork/crates/js-sys" }
web-sys = { path = "../wasm-bindgen-fork/crates/web-sys" }
