[package]
name = "test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
js-sys = "=0.3.69"
web-sys = { version = "=0.3.69", features = [
  "Window",
  "Document",
  "HtmlElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "BaseKeyframe",
  "CompositeOperation",
  "RtcRtpTransceiverInit",
  "RtcRtpTransceiverDirection",
  "RtcPeerConnection",
  "RtcRtpTransceiver",
  "GpuTextureFormat",
  "GpuTextureViewDescriptor",
] }
wasm-bindgen = "=0.2.92"
